# bundesliga-data-shootout

./: .gitignore  README.md  environment.yml  pyproject.toml  tox.ini
notebooks/: exploration.ipynb  training.ipynb
references/: research.md
src/data/: data_modules.py  datasets.py  make_dataset.py  processing.py  transformations.py
src/models/: models.py
src/training/: lightning_modules.py  pl_modules.py  train_lstm.py  train_r3d.py  utils.py
